welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:4: error: ';' expected but 'if' found.
	}if (a>b) {
         ^